--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "express": "^4.18.3",
     "framer-motion": "^11.0.8",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "sequelize": "^6.37.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
