--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dev": "concurrently \"cd backend && nodemon server.js\" \"vite\""
   },
   "dependencies": {
+    "concurrently": "8.2.2",
+    "nodemon": "3.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.3",
